# opencode-mega-project

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  create_branches.sh  generate_1500.py  generate_commits.sh  generate_remaining.py  github_workflow.sh  pyproject.toml  requirements.txt  setup.cfg
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
config/: default.yaml  production.yaml  profile_00.yaml  profile_01.yaml  profile_02.yaml  profile_03.yaml  profile_04.yaml  profile_05.yaml  profile_06.yaml  profile_07.yaml  profile_08.yaml  profile_09.yaml  profile_10.yaml  profile_11.yaml  profile_12.yaml  profile_13.yaml  profile_14.yaml  profile_15.yaml  profile_16.yaml  profile_17.yaml  profile_18.yaml  profile_19.yaml
docs/: check_api_design.md  check_best_practices.md  check_concurrency.md  check_dependencies.md  check_encoding.md  check_error_handling.md  check_logging.md  check_maintainability.md  check_testing.md  checks.md  configuration.md  getting-started.md  github-actions-integration.md  index.html  index.md  plugin_development.md  pre-commit-integration.md  usage.md
examples/: advanced_config.py  basic_usage.py  ci_github_actions.yml  ci_integration.py  custom_check.py  custom_config.py  pre_commit_config.py  usage_00.py  usage_01.py  usage_02.py  usage_03.py  usage_04.py  usage_05.py  usage_06.py  usage_07.py  usage_08.py  usage_09.py  usage_10.py  usage_11.py  usage_12.py  usage_13.py  usage_14.py  usage_15.py  usage_16.py  usage_17.py  usage_18.py  usage_19.py
integrations/: github_actions.py  pre_commit.py  vscode.py
scripts/: pre-commit.sh  run_checks.sh  setup_dev.sh
tests/: conftest.py  test_api_design.py  test_ast_utils.py  test_best_practices.py  test_binary_detection.py  test_cache.py  test_cache_lru.py  test_cli.py  test_collector.py  test_complexity.py  test_concurrency.py  test_config.py  test_config_edge.py  test_config_schema.py  test_csv_writer.py  test_dependencies.py  test_documentation.py  test_duplication.py  test_edge_case_00.py  test_edge_case_01.py  test_edge_case_02.py  (+505 more)
(+2684 files in other folders)
