[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codeguard"
description = "Python code quality and security analysis tool"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["code-quality", "security", "linter", "analyzer"]
dynamic = ["version"]
dependencies = [
    "PyYAML>=6.0",
    "click>=8.0",
]

[project.scripts]
codeguard = "codeguard.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]
