[metadata]
name = codeguard
version = 0.1.0
description = Python code quality and security analysis tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mohameden19961/opencode-mega-project
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    click>=8.0
    pyyaml>=6.0
    rich>=13.0
    pathspec>=0.11

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov>=4.0
    black>=23.0
    ruff>=0.1
    mypy>=1.0
    pre-commit>=3.0
html =
    jinja2>=3.0
